--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,9 @@
       "pre-commit": "npm run test && npm run prettier-format && npm run lint"
     }
   },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -34,16 +37,16 @@
     "@typescript-eslint/eslint-plugin": "^5.31.0",
     "@typescript-eslint/parser": "^5.31.0",
     "eslint": "^8.57.0",
-    "eslint_d": "^13.1.2",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-jest": "^26.6.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "eslint_d": "^13.1.2",
     "husky": "^8.0.1",
     "jest": "^28.1.3",
     "nodemon": "^2.0.19",
     "onchange": "^7.1.0",
     "prettier": "^2.7.1",
-    "prisma": "^5.16.0",
+    "prisma": "^5.17.0",
     "rimraf": "^3.0.2",
     "run-script-os": "^1.1.6",
     "ts-jest": "^28.0.7",
@@ -51,7 +54,7 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
-    "@prisma/client": "^5.16.0",
+    "@prisma/client": "^5.17.0",
     "axios": "^1.7.2",
     "cors": "^2.8.5",
     "express": "^4.19.2",
